Code still requires some assembly to get to the final product, but we are getting there

--- a/perp_bt- numba.ipynb
+++ b/perp_bt- numba.ipynb
@@ -256,183 +256,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 215,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "ename": "TypingError",
+     "evalue": "Failed in nopython mode pipeline (step: nopython frontend)\n\u001b[1m\u001b[1m\u001b[1mNo implementation of function Function(<built-in function empty>) found for signature:\n \n >>> empty(int64, dtype=Literal[str](datetime64[s]))\n \nThere are 2 candidate implementations:\n\u001b[1m      - Of which 2 did not match due to:\n      Overload of function 'empty': File: numba/core/typing/npydecl.py: Line 526.\n        With argument(s): '(int64, dtype=Literal[str](datetime64[s]))':\u001b[0m\n\u001b[1m       No match.\u001b[0m\n\u001b[0m\n\u001b[0m\u001b[1mDuring: resolving callee type: Function(<built-in function empty>)\u001b[0m\n\u001b[0m\u001b[1mDuring: typing of call at <ipython-input-215-4a5dcba21521> (13)\n\u001b[0m\n\u001b[1m\nFile \"<ipython-input-215-4a5dcba21521>\", line 13:\u001b[0m\n\u001b[1mdef run_bt(np_df, times, pct_buy, pct_flat, pct_sell, num_reps):\n    <source elided>\n    output[0, 0] = 0\n\u001b[1m    open_times = np.empty(num_reps, dtype='datetime64[s]')\n\u001b[0m    \u001b[1m^\u001b[0m\u001b[0m\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypingError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-215-4a5dcba21521>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     80\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     81\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 82\u001b[0;31m \u001b[0mrez\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrun_bt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp_df\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclose_dts\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpct_buy\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpct_flat\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpct_sell\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp_df\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     83\u001b[0m pd.DataFrame(rez, columns=[\"position\", \"open_price\", \"close_price\", \n\u001b[1;32m     84\u001b[0m                            \"type\", \"open_pct_diff\", \"close_pct_diff\", \"open_tsecs\", \"close_tsecs\"]).dropna()\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/numba/core/dispatcher.py\u001b[0m in \u001b[0;36m_compile_for_args\u001b[0;34m(self, *args, **kws)\u001b[0m\n\u001b[1;32m    413\u001b[0m                 \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpatch_message\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    414\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 415\u001b[0;31m             \u001b[0merror_rewrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'typing'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    416\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0merrors\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mUnsupportedError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    417\u001b[0m             \u001b[0;31m# Something unsupported is present in the user code, add help info\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/numba/core/dispatcher.py\u001b[0m in \u001b[0;36merror_rewrite\u001b[0;34m(e, issue_type)\u001b[0m\n\u001b[1;32m    356\u001b[0m                 \u001b[0;32mraise\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    357\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 358\u001b[0;31m                 \u001b[0mreraise\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    359\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    360\u001b[0m         \u001b[0margtypes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/numba/core/utils.py\u001b[0m in \u001b[0;36mreraise\u001b[0;34m(tp, value, tb)\u001b[0m\n\u001b[1;32m     78\u001b[0m         \u001b[0mvalue\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     79\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__traceback__\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mtb\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 80\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwith_traceback\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     81\u001b[0m     \u001b[0;32mraise\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     82\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypingError\u001b[0m: Failed in nopython mode pipeline (step: nopython frontend)\n\u001b[1m\u001b[1m\u001b[1mNo implementation of function Function(<built-in function empty>) found for signature:\n \n >>> empty(int64, dtype=Literal[str](datetime64[s]))\n \nThere are 2 candidate implementations:\n\u001b[1m      - Of which 2 did not match due to:\n      Overload of function 'empty': File: numba/core/typing/npydecl.py: Line 526.\n        With argument(s): '(int64, dtype=Literal[str](datetime64[s]))':\u001b[0m\n\u001b[1m       No match.\u001b[0m\n\u001b[0m\n\u001b[0m\u001b[1mDuring: resolving callee type: Function(<built-in function empty>)\u001b[0m\n\u001b[0m\u001b[1mDuring: typing of call at <ipython-input-215-4a5dcba21521> (13)\n\u001b[0m\n\u001b[1m\nFile \"<ipython-input-215-4a5dcba21521>\", line 13:\u001b[0m\n\u001b[1mdef run_bt(np_df, times, pct_buy, pct_flat, pct_sell, num_reps):\n    <source elided>\n    output[0, 0] = 0\n\u001b[1m    open_times = np.empty(num_reps, dtype='datetime64[s]')\n\u001b[0m    \u001b[1m^\u001b[0m\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
-    "# @jit(nopython=True)\n",
-    "def run_bt(np_df, close_dts, pct_buy, pct_flat, pct_sell, num_reps, last_trade):\n",
+    "@jit(nopython=True)\n",
+    "def run_bt(np_df, times, pct_buy, pct_flat, pct_sell, num_reps):\n",
     "    '''\n",
     "        End result is going to be \n",
     "        columns: position, open price, close price, type, open_pct_diff, close_pct_diff, open_tsecs, close_tsecs\n",
     "    \n",
     "    \n",
+    "        For the loop, open_long=0, flip_long=1, open_short=2, flip_short=3, close=4\n",
     "    '''\n",
     "    output = np.empty((num_reps, 8), np.float64)\n",
     "    output[:] = np.nan\n",
     "    output[0, 0] = 0\n",
-    "    open_dates = np.empty(num_reps)\n",
-    "    trade_types = np.empty(num_reps)\n",
+    "    open_time_index = np.empty(num_reps)\n",
+    "    close_time_index = np.empty(num_reps)\n",
+    "    last_trade = 0\n",
     "    \n",
+    "    print(open_times)\n",
     "    for i in range(num_reps):\n",
     "        trade_type=None\n",
     "        row = np_df[i, :]\n",
-    "        close_dt = close_dts[i]\n",
+    "        tt = times[i]\n",
     "        pct_diff = row[-1]\n",
     "        price = row[1]\n",
     "        tsec = row[0]\n",
     "        if pct_diff < pct_buy:\n",
     "            if output[last_trade, 0] == 0:\n",
-    "                trade_type = 'open_long'\n",
+    "                trade_type = 0\n",
     "            elif output[last_trade, 0] == -1:\n",
-    "                trade_type = 'flip_long'\n",
+    "                trade_type = 1\n",
     "        elif pct_diff > pct_sell:\n",
     "            if output[last_trade, 0] == 0:\n",
-    "                trade_type = 'open_short'\n",
+    "                trade_type = 2\n",
     "            elif output[last_trade, 0] == 1:\n",
-    "                trade_type = 'flip_short'\n",
+    "                trade_type = 3\n",
     "\n",
     "        elif output[last_trade, 0] == 1 and pct_diff > pct_flat:\n",
-    "            trade_type = 'close'\n",
+    "            trade_type = 4\n",
     "        elif output[last_trade, 0] == -1 and pct_diff < pct_flat:\n",
-    "            trade_type = 'close'\n",
+    "            trade_type = 4\n",
     "\n",
     "        if trade_type is not None:\n",
-    "            if trade_type in ['open_long','open_short']:\n",
+    "            if trade_type == 0 or trade_type == 2:\n",
     "                last_trade = i\n",
-    "                if trade_type == 'open_long':\n",
+    "                if trade_type == 0:\n",
     "                    output[last_trade, 0] = 1\n",
-    "                    output[last_trade, 3] = 1\n",
+    "                    output[last_trade, 3] = trade_type\n",
     "                else:\n",
     "                    output[last_trade, 0] = -1\n",
-    "                    output[last_trade, 3] = -1\n",
+    "                    output[last_trade, 3] = trade_type\n",
     "                \n",
     "                output[last_trade, 1] = price\n",
     "                output[last_trade, 4] = pct_diff\n",
-    "                output[last_trade, -2] = tsec                \n",
+    "                output[last_trade, -2] = tsec\n",
+    "                open_times[last_trade] = tt\n",
     "\n",
     "            else:\n",
     "                #first close and then open a new pos if we are flipping\n",
     "                output[last_trade, 0] = 0\n",
     "                output[last_trade, 2] = price\n",
     "                output[last_trade, 5] = pct_diff\n",
-    "                output[last_trade, -1] = tsec                \n",
-    "                if trade_type in ['flip_long','flip_short']:\n",
+    "                output[last_trade, -1] = tsec   \n",
+    "                close_times[last_trade] = tt\n",
+    "                if trade_type == 1 or trade_type == 3:\n",
     "                    last_trade = i\n",
-    "                    if trade_type == 'flip_long':\n",
+    "                    if trade_type == 1:\n",
     "                        output[last_trade, 0] = 1\n",
     "                    else:\n",
     "                        output[last_trade, 0] = -1\n",
     "                    output[last_trade, 1] = price\n",
     "                    output[last_trade, 4] = pct_diff\n",
     "                    output[last_trade, -2] = tsec\n",
-    "                    \n",
-    "                    if trade_type == 'flip_long':\n",
-    "                        output[last_trade, 3] = 1\n",
+    "                    open_times[last_trade] = tt\n",
+    "                    if trade_type == 1:\n",
+    "                        output[last_trade, 3] = 0\n",
     "                    else:\n",
-    "                        output[last_trade, 3] = -1\n",
+    "                        output[last_trade, 3] = 2\n",
     "\n",
-    "    return output"
+    "    return output\n",
+    "\n",
+    "\n",
+    "\n",
+    "rez = run_bt(np_df, close_dts, pct_buy, pct_flat, pct_sell, len(np_df))\n",
+    "pd.DataFrame(rez, columns=[\"position\", \"open_price\", \"close_price\", \n",
+    "                           \"type\", \"open_pct_diff\", \"close_pct_diff\", \"open_tsecs\", \"close_tsecs\"]).dropna()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 216,
+   "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>position</th>\n",
-       "      <th>open_price</th>\n",
-       "      <th>close_price</th>\n",
-       "      <th>type</th>\n",
-       "      <th>open_pct_diff</th>\n",
-       "      <th>close_pct_diff</th>\n",
-       "      <th>open_tsecs</th>\n",
-       "      <th>close_tsecs</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1574.890688</td>\n",
-       "      <td>1548.770199</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>0.002662</td>\n",
-       "      <td>-0.005247</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>35.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>44</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1548.770199</td>\n",
-       "      <td>1553.645889</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-0.005247</td>\n",
-       "      <td>-0.002116</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>35.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>46</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1558.372660</td>\n",
-       "      <td>1552.232777</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>0.000920</td>\n",
-       "      <td>-0.003023</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>50.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "    position   open_price  close_price  type  open_pct_diff  close_pct_diff  \\\n",
-       "0        0.0  1574.890688  1548.770199  -1.0       0.002662       -0.005247   \n",
-       "44       0.0  1548.770199  1553.645889   1.0      -0.005247       -0.002116   \n",
-       "46       0.0  1558.372660  1552.232777  -1.0       0.000920       -0.003023   \n",
-       "\n",
-       "    open_tsecs  close_tsecs  \n",
-       "0         35.0         35.0  \n",
-       "44        35.0         35.0  \n",
-       "46        35.0         50.0  "
+       "numpy.datetime64"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "rez = run_bt(np_df, close_dts, pct_buy, pct_flat, pct_sell, 50, 0)\n",
-    "pd.DataFrame(rez, columns=[\"position\", \"open_price\", \"close_price\", \n",
-    "                           \"type\", \"open_pct_diff\", \"close_pct_diff\", \"open_tsecs\", \"close_tsecs\"]).dropna()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
