Pushing the full re-write

--- a/perp_bt- numba.ipynb
+++ b/perp_bt- numba.ipynb
@@ -256,26 +256,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 254,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "ename": "TypingError",
-     "evalue": "Failed in nopython mode pipeline (step: nopython frontend)\n\u001b[1m\u001b[1m\u001b[1mNo implementation of function Function(<built-in function empty>) found for signature:\n \n >>> empty(int64, dtype=Literal[str](datetime64[s]))\n \nThere are 2 candidate implementations:\n\u001b[1m      - Of which 2 did not match due to:\n      Overload of function 'empty': File: numba/core/typing/npydecl.py: Line 526.\n        With argument(s): '(int64, dtype=Literal[str](datetime64[s]))':\u001b[0m\n\u001b[1m       No match.\u001b[0m\n\u001b[0m\n\u001b[0m\u001b[1mDuring: resolving callee type: Function(<built-in function empty>)\u001b[0m\n\u001b[0m\u001b[1mDuring: typing of call at <ipython-input-215-4a5dcba21521> (13)\n\u001b[0m\n\u001b[1m\nFile \"<ipython-input-215-4a5dcba21521>\", line 13:\u001b[0m\n\u001b[1mdef run_bt(np_df, times, pct_buy, pct_flat, pct_sell, num_reps):\n    <source elided>\n    output[0, 0] = 0\n\u001b[1m    open_times = np.empty(num_reps, dtype='datetime64[s]')\n\u001b[0m    \u001b[1m^\u001b[0m\u001b[0m\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypingError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-215-4a5dcba21521>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     80\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     81\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 82\u001b[0;31m \u001b[0mrez\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrun_bt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp_df\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclose_dts\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpct_buy\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpct_flat\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpct_sell\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp_df\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     83\u001b[0m pd.DataFrame(rez, columns=[\"position\", \"open_price\", \"close_price\", \n\u001b[1;32m     84\u001b[0m                            \"type\", \"open_pct_diff\", \"close_pct_diff\", \"open_tsecs\", \"close_tsecs\"]).dropna()\n",
-      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/numba/core/dispatcher.py\u001b[0m in \u001b[0;36m_compile_for_args\u001b[0;34m(self, *args, **kws)\u001b[0m\n\u001b[1;32m    413\u001b[0m                 \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpatch_message\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    414\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 415\u001b[0;31m             \u001b[0merror_rewrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'typing'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    416\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0merrors\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mUnsupportedError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    417\u001b[0m             \u001b[0;31m# Something unsupported is present in the user code, add help info\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/numba/core/dispatcher.py\u001b[0m in \u001b[0;36merror_rewrite\u001b[0;34m(e, issue_type)\u001b[0m\n\u001b[1;32m    356\u001b[0m                 \u001b[0;32mraise\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    357\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 358\u001b[0;31m                 \u001b[0mreraise\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    359\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    360\u001b[0m         \u001b[0margtypes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/numba/core/utils.py\u001b[0m in \u001b[0;36mreraise\u001b[0;34m(tp, value, tb)\u001b[0m\n\u001b[1;32m     78\u001b[0m         \u001b[0mvalue\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     79\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__traceback__\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mtb\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 80\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwith_traceback\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     81\u001b[0m     \u001b[0;32mraise\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     82\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypingError\u001b[0m: Failed in nopython mode pipeline (step: nopython frontend)\n\u001b[1m\u001b[1m\u001b[1mNo implementation of function Function(<built-in function empty>) found for signature:\n \n >>> empty(int64, dtype=Literal[str](datetime64[s]))\n \nThere are 2 candidate implementations:\n\u001b[1m      - Of which 2 did not match due to:\n      Overload of function 'empty': File: numba/core/typing/npydecl.py: Line 526.\n        With argument(s): '(int64, dtype=Literal[str](datetime64[s]))':\u001b[0m\n\u001b[1m       No match.\u001b[0m\n\u001b[0m\n\u001b[0m\u001b[1mDuring: resolving callee type: Function(<built-in function empty>)\u001b[0m\n\u001b[0m\u001b[1mDuring: typing of call at <ipython-input-215-4a5dcba21521> (13)\n\u001b[0m\n\u001b[1m\nFile \"<ipython-input-215-4a5dcba21521>\", line 13:\u001b[0m\n\u001b[1mdef run_bt(np_df, times, pct_buy, pct_flat, pct_sell, num_reps):\n    <source elided>\n    output[0, 0] = 0\n\u001b[1m    open_times = np.empty(num_reps, dtype='datetime64[s]')\n\u001b[0m    \u001b[1m^\u001b[0m\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "@jit(nopython=True)\n",
     "def run_bt(np_df, times, pct_buy, pct_flat, pct_sell, num_reps):\n",
@@ -293,7 +278,6 @@
     "    close_time_index = np.empty(num_reps)\n",
     "    last_trade = 0\n",
     "    \n",
-    "    print(open_times)\n",
     "    for i in range(num_reps):\n",
     "        trade_type=None\n",
     "        row = np_df[i, :]\n",
@@ -330,7 +314,7 @@
     "                output[last_trade, 1] = price\n",
     "                output[last_trade, 4] = pct_diff\n",
     "                output[last_trade, -2] = tsec\n",
-    "                open_times[last_trade] = tt\n",
+    "                open_time_index[last_trade] = last_trade\n",
     "\n",
     "            else:\n",
     "                #first close and then open a new pos if we are flipping\n",
@@ -338,7 +322,7 @@
     "                output[last_trade, 2] = price\n",
     "                output[last_trade, 5] = pct_diff\n",
     "                output[last_trade, -1] = tsec   \n",
-    "                close_times[last_trade] = tt\n",
+    "                close_time_index[last_trade] = last_trade\n",
     "                if trade_type == 1 or trade_type == 3:\n",
     "                    last_trade = i\n",
     "                    if trade_type == 1:\n",
@@ -348,38 +332,85 @@
     "                    output[last_trade, 1] = price\n",
     "                    output[last_trade, 4] = pct_diff\n",
     "                    output[last_trade, -2] = tsec\n",
-    "                    open_times[last_trade] = tt\n",
+    "                    open_time_index[last_trade] = last_trade\n",
     "                    if trade_type == 1:\n",
     "                        output[last_trade, 3] = 0\n",
     "                    else:\n",
     "                        output[last_trade, 3] = 2\n",
     "\n",
-    "    return output\n",
-    "\n",
-    "\n",
-    "\n",
-    "rez = run_bt(np_df, close_dts, pct_buy, pct_flat, pct_sell, len(np_df))\n",
-    "pd.DataFrame(rez, columns=[\"position\", \"open_price\", \"close_price\", \n",
-    "                           \"type\", \"open_pct_diff\", \"close_pct_diff\", \"open_tsecs\", \"close_tsecs\"]).dropna()"
+    "    return output, open_time_index, close_time_index"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 274,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "rez, open_time_index, close_time_index = run_bt(np_df, close_dts, pct_buy, pct_flat, pct_sell, len(np_df))\n",
+    "rez = pd.DataFrame(rez, columns=[\"position\", \"open_price\", \"close_price\", \n",
+    "                           \"type\", \"open_pct_diff\", \"close_pct_diff\", \"open_tsecs\", \"close_tsecs\"])\n",
+    "\n",
+    "rez['open_time'] = open_time_index\n",
+    "rez['close_time'] = close_time_index\n",
+    "rez = rez.dropna()\n",
+    "\n",
+    "rez['open_time'] = rez['open_time'].astype(int)\n",
+    "rez['close_time'] = rez['close_time'].astype(int)\n",
+    "rez['open_time'] = rez['open_time'].apply(lambda x: close_dts[x])\n",
+    "rez['close_time'] = rez['close_time'].apply(lambda x: close_dts[x])\n",
+    "rez['open_time'] += rez['open_tsecs'].apply(lambda x: dt.timedelta(seconds=int(x)))\n",
+    "rez['close_time'] += rez['close_tsecs'].apply(lambda x: dt.timedelta(seconds=int(x)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 276,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "numpy.datetime64"
+       "position             0.000000\n",
+       "open_price        2732.949476\n",
+       "close_price       2734.904321\n",
+       "open_pct_diff       -0.002846\n",
+       "close_pct_diff      -0.002463\n",
+       "open_tsecs          28.041991\n",
+       "close_tsecs         23.344671\n",
+       "pnl                  6.896974\n",
+       "edge                10.170260\n",
+       "dtype: float64"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 276,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "def trade_type(x):\n",
+    "    if x == 0.:\n",
+    "        return \"open_long\"\n",
+    "    elif x == 1.:\n",
+    "        return \"flip_long\"\n",
+    "    elif x == 2.:\n",
+    "        return \"open_short\"\n",
+    "    elif x == 3.:\n",
+    "        return \"flip_short\"\n",
+    "    else:\n",
+    "        return \"close\"\n",
+    "\n",
+    "\n",
+    "rez[\"type\"] = rez[\"type\"].apply(lambda x: trade_type(x))\n",
+    "rez['pnl'] = 0\n",
+    "rez['edge'] = np.abs(rez['open_price'] - rez['open_price']/(1+rez['open_pct_diff']))\n",
+    "rez.loc[rez['type']=='open_short','pnl'] = rez['open_price'] - rez['close_price']\n",
+    "rez.loc[rez['type']=='open_long','pnl'] = -(rez['open_price'] - rez['close_price'])\n",
+    "rez.mean()"
+   ]
   }
  ],
  "metadata": {
